--- a/ar/assets/scss/_elements.scss
+++ b/ar/assets/scss/_elements.scss
@@ -221,6 +221,8 @@ span {
 }
 
 .checkbox {
+    display: inline-block;
+
     label {
         position: relative;
         padding-right: 25px;
@@ -279,6 +281,26 @@ span {
                     border-color: white;
                     @include transition(0.1s linear);
                 }
+            }
+        }
+    }
+
+    &.no-label {
+        height: 16px;
+        margin: 0;
+        vertical-align: middle;
+        input[type="checkbox"] {
+            margin: 0;
+        }
+        label {
+            max-height: 16px;
+            padding-left: 16px;
+            max-height: 16px;
+            &:before {
+                top: 0;
+            }
+            &:after {
+                top: 4px;
             }
         }
     }
@@ -664,11 +686,10 @@ span {
             padding: 0 15px;
             color: black;
             text-align: center;
-            cursor: pointer;
+            cursor: initial;
             font-size: 1em;
             font-family: $droid-bold;
             display: block;
-            pointer-events: none;
         }
         &:first-child {
             border-top-right-radius: 5px;
@@ -700,16 +721,10 @@ span {
             @include transform(rotate(-135deg));
             z-index: 9;
         }
-        &.opened {
-            a {
-                pointer-events: initial;
-            }
-        }
         &.current {
             background-color: lighten($completed-color, 20%);
             a {
                 color: black;
-                pointer-events: initial;
             }
             &:after,
             &:before {
@@ -720,7 +735,6 @@ span {
             background-color: $completed-color;
             a {
                 color: white;
-                pointer-events: initial;
             }
             &:after,
             &:before {
@@ -791,6 +805,26 @@ span {
         }
     }
 }
+
+
+/**** IE 10 specific styles ***/
+@media screen and (-ms-high-contrast: active),
+(-ms-high-contrast: none) {
+    .imagePreviewer {
+        display: table;
+        width: 100%;
+        height: 100%;
+        .imageWrapper {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+            img {
+                display: inline-block;
+            }
+        }
+    }
+}
+
 body.lockScroll {
     overflow: hidden !important;
 }
