--- a/ar/assets/scss/_header.scss
+++ b/ar/assets/scss/_header.scss
@@ -179,7 +179,7 @@
         top: 0;
         left: 0;
         right: 0;
-        z-index: 9999;
+        z-index: 9991;
     }
     .navbar-nav {
         >li {
